--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
 <body>
     <nav>
-    <a href = "C:\WebbUtveckling\HTML\hobbies.html">Hobbies</a>
-    <a href="C:\WebbUtveckling\HTML\contact.html">Kontakt</a>
+    <a href = "hobbies.html">Hobbies</a>
+    <a href="contact.html">Kontakt</a>
     </nav>
     <br>
     <img src = "images/Baki_profile.webp"size= "150" height ="150">
